--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.33"
-clap = { version = "4.4.18", features = ["derive"] }
 lazy_static = "1.4.0"
+rustyline = "14.0.0"
