--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.33"
 clap = { version = "4.5.2", features = ["derive"] }
+dirs = "5.0.1"
 lazy_static = "1.4.0"
 rustyline = "14.0.0"
 
