--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ clap = { version = "4.5.2", features = ["derive"] }
 dirs = "5.0.1"
 lazy_static = "1.4.0"
 rustyline = "14.0.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9.33"
 
 [[bin]]
 name = "rodomopo"
